--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "K53",
+  "short_name": "K53-SA",
   "name": "K53-SA",
   "description": "K53 South Africa learners licence test multiple choice questions and answers",
   "icons": [
